--- a/Yale_B Optimal Autoencoding.ipynb
+++ b/Yale_B Optimal Autoencoding.ipynb
@@ -63,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dataset0 = sklearn.datasets.load_files('data/CroppedYale', shuffle=True)"
@@ -95,6 +97,26 @@
     "# y = y[:size0]\n",
     "\n",
     "X_train, X_test, y_train, y_test = model_selection.train_test_split(X, y, test_size=0.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1629"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape[0]"
    ]
   },
   {
@@ -182,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "encoder = MLP(n_in, 2*n_cts + n_categorical, depth, widths)\n",
@@ -193,6 +217,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -225,7 +250,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "zhat = oe.encode(X_train)"
